--- a/react-in-angular/angular.json
+++ b/react-in-angular/angular.json
@@ -92,7 +92,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "exclude": ["**/*.react.test.?(c|m)[jt]s?(x)"]
           }
         }
       }
