--- a/react-in-angular/tsconfig.json
+++ b/react-in-angular/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "resolveJsonModule": true,
     "jsx": "react",
     "outDir": "./dist/out-tsc",
     "strict": true,
